--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "lodash": "^4.17.15",
-    "uglifyjs-webpack-plugin": "^2.2.0"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   }
 }
