--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "dev": "node ./build/server.js",
+    "dev": "node ./build/server/server.js",
     "build:dev": "webpack --config ./build/webpack.dev.js",
     "build:pro": "webpack --config ./build/webpack.prod.js"
   },
@@ -13,17 +13,21 @@
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^6.0.3",
     "css-loader": "^3.3.2",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "install": "^0.13.0",
+    "npm": "^6.13.4",
     "style-loader": "^1.0.1",
-    "webpack": "^4.41.2",
+    "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "dependencies": {
     "lodash": "^4.17.15",
