--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "node ./build/server/server.js",
-    "build:dev": "webpack --config ./build/webpack.dev.js",
-    "build:pro": "webpack --config ./build/webpack.prod.js"
+    "build:dev": "cross-env NODE_ENV=development webpack --config ./build/webpack.dev.js",
+    "build:pro": "cross-env NODE_ENV=production webpack --config ./build/webpack.prod.js"
   },
   "keywords": [],
   "author": "",
