--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "cross-env": "^6.0.3",
     "css-loader": "^3.3.2",
     "express": "^4.17.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^5.0.2",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "install": "^0.13.0",
+    "mini-css-extract-plugin": "^0.8.2",
     "npm": "^6.13.4",
     "style-loader": "^1.0.1",
     "vue": "^2.6.11",
